# geve

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  geve.cabal  shell.nix  stack.yaml  svg-builder.hs
distortion/: 02.blend  gen-distorsion.hs
fläche/: svg-builder.hs
linien/: svg-builder.hs
matrix/: matrix-from-bitmap.hs  svg-builder.hs
pfeile/: svg-builder.hs
raster/: Raster.hs  build-raster.hs  raster-image.hs  raster.hs
src/: Distorsion.hs  Fläche.hs  Linien.hs  Main.hs  Pfeile.hs  Raster.hs  RasterImage.hs  polygon_algo.py
