name:                geve
version:             0.1.0.0
-- synopsis:
description:         End result for the course 'Grafische Elemente & visuelle Efekte'
homepage:            https://erictapen.name/
license:             BSD3
license-file:        LICENSE
author:              Kerstin Humm
maintainer:          mail@erictapen.name
copyright:           2020 Kerstin Humm
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable geve
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       svg-builder,
                       directory,
                       hsnoise
  other-modules:       Distorsion,
                       Fläche,
                       Linien,
                       Pfeile,
                       Raster


